--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -41,6 +41,7 @@ main .cartao-pokemon:hover{
 main{
     padding: 25px;
 }
+
 main .listagem-pokemon{
     display: flex;
     flex-wrap: wrap;
@@ -144,8 +145,9 @@ main .cartao-pokemon .tipo{
 }
 
 main .descricao{
-    max-width: 80px;
+    max-width: 160px;
     overflow: hidden;
     font-size: 15px;
     padding-right: 10px;
+    font-family: 'Poppins', sans-serif;
 }
