--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -151,3 +151,10 @@ main .descricao{
     padding-right: 10px;
     font-family: 'Poppins', sans-serif;
 }
+
+main .descricao {
+    max-height: 80px;
+    overflow-y: scroll;
+    font-size: 14px;
+    padding-right: 10px;
+  }
